Added attendance history list screen

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -59,8 +59,10 @@
       </div>
       
     <!-- <div class="text-center" id="error_message" style="display: none;">入力に不備があります</div> -->
-
+    
     <% end %>
+    
+    <%= link_to "これまでの勤怠履歴を見る", all_posts_path %>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
